# thought-diary-app

./: .copilot-commit-message-instructions.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
backend/: .env.example  config.py  main.py  pyproject.toml
backend/app/: __init__.py  extensions.py
backend/app/blueprints/: __init__.py
backend/app/blueprints/auth/: __init__.py  routes.py  schemas.py
backend/app/blueprints/diaries/: __init__.py  routes.py  schemas.py
backend/app/blueprints/system/: __init__.py  routes.py
backend/app/models/: __init__.py  thought_diary.py  user.py
backend/app/services/: __init__.py  ai_service.py
backend/app/utils/: password.py  seed.py  validators.py
backend/migrations/versions/: 3edc1c1ea583_initial_migration_add_user_and_.py
backend/tests/: conftest.py
backend/tests/unit/: test_models.py
backend/tests/unit/blueprints/: __init__.py  test_auth_routes.py  test_diary_routes.py  test_system_routes.py
backend/tests/unit/services/: __init__.py  test_ai_service.py
backend/tests/unit/utils/: __init__.py  test_password.py  test_validators.py
docs/: backend-api.md  backend-architecture.md  backend-database.md  backend-deployment.md  backend-development.md  frontend-api.md  frontend-architecture.md  frontend-components.md  frontend-deployment.md  frontend-development.md  frontend-testing.md
frontend/: .env.example  .prettierignore  eslint.config.js  package-lock.json  package.json  vitest.config.ts
(+62 files in other folders)
